# bark-clone-voice-webui-mac

./: Dockerfile  README.md  StartBark.bat  config.yaml  pyproject.toml  swap_voice.py  webui.py
bark/: api.py  cli.py  generation.py  utils.py
bark/assets/prompts/custom/: readme.md
bark/hubert/: customtokenizer.py  hubert_manager.py
cloning/: clonevoice.py  clonevoice_old.py
docs/: wow.webm
installer/: installer.py  windows_run.bat
notebooks/: clonevoice_new.ipynb
training/: training_prepare.py
util/: helper.py
